# services-performance

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .tool-versions  CLAUDE.md  CONTRIBUTING.md  Dockerfile  PR_DESCRIPTION.md  README.md  docker-compose.yml  pyproject.toml
.claude/: claude.md  settings.json  settings.local.json
.claude/agents/: code-analyst.md  codebase-analyzer.md  codebase-locator.md  codebase-pattern-finder.md  integration-specialist.md  qa-runner.md
.claude/commands/: commit.md  create_plan.md  create_pr.md  create_worktree.md  debug.md  describe_pr.md  implement_plan.md  init_claude_md.md  linear.md  local_review.md  research_codebase.md  validate_plan.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  lint.yml
config/: watch-tower-config.json
configs/: baseline.toml  driver.toml  grafana-dashboard.yml  grafana-datasource.yml  prometheus.yml  thresholds.toml
configs/dashboards/: api-performance.json  auction-activity.json  comparison.json  performance.json  performance.json.backup  reconciliation.json  resources.json  trader-activity.json
configs/scenarios/: exponential-ramp-stress.yml  heavy-load.yml  light-load.yml  medium-load.yml  poisson-realistic-traffic.yml  quick-test.yml  ramp-down-cooldown.yml  spike-stress-test.yml
configs/templates/: ramp-up.template.yml  sustained-load.template.yml
docker/: Dockerfile  anvil-entrypoint.sh  driver-entrypoint.sh
docs/: architecture.md  benchmarking.md  cli.md  conditional-orders.md  configuration-reference.md  development.md  faq.md  metrics.md  operations.md  order-generation.md  reports.md  scenario-best-practices.md  scenario-user-guide.md  trading-patterns.md  trading-strategies.md  troubleshooting.md  user-simulation.md  wallet-funding.md  workflows.md
docs/examples/: getting-started.md
docs/scenarios/: high-frequency.md  large-orders.md  limit-orders-only.md  regression-test.md  sustained-load.md
examples/scenarios/: custom-ramp-up-example.yml  quick-ramp-up-example.yml  spike-test-example.yml  sustained-load-example.yml
hack/: CLAUDE.md  cleanup-docker.sh  create_worktree.sh  setup_repo.sh
scripts/: reconcile_recent_test.py
src/cow_performance/: __init__.py
tests/: conftest.py
tests/e2e/: __init__.py  conftest.py  test_cli_run.py  test_conditional_orders.py  test_hooks_orders.py
tests/integration/: test_cli_integration.py  test_cli_live_display.py  test_comparison_integration.py  test_conditional_orders.py  test_metrics_collection.py  test_order_generation.py  test_prometheus_integration.py  test_reporting_integration.py  test_user_simulation.py  test_wallet_funding.py
tests/unit/: test_baseline_git_info.py  test_baseline_manager.py  test_baseline_models.py  test_baseline_validation.py  test_cli.py  test_comparison_engine.py  test_comparison_models.py  test_comparison_reporter.py  test_comparison_statistics.py  test_comparison_thresholds.py  test_conditional_order_factory.py  test_conditional_order_schema.py  test_config.py  test_config_validation.py  test_defaults.py  test_expiration_checker.py  test_exporter_uid_rename.py  test_generator.py  test_inheritance.py  test_instrumented_client.py  test_metrics_aggregator.py  test_metrics_export.py  test_metrics_models.py  test_metrics_store.py  test_order_factory.py  test_order_lifecycle.py  test_order_signer.py  test_order_templates.py  test_order_tracker.py  test_order_validation.py  test_package.py  test_profiles.py  test_realtime_streaming.py  test_reporting_csv.py  test_reporting_formatters.py  test_reporting_models.py  test_reporting_recommendations.py  test_reporting_summary.py  test_resource_monitor.py  test_scenario_listing.py  (+6 more)
thoughts/: INDEX.md  anvil-event-sync-measurements.md  fork-mode-fill-rate-investigation.md  order-settlement-fixes.md
thoughts/analysis/: 2026-02-27-dashboard-missing-data-analysis.md  (+1 more)
(+154 files in other folders)
