[tool.poetry]
name = "cow-performance-testing-suite"
version = "0.1.0"
description = "Comprehensive performance testing suite for CoW Protocol Playground"
authors = ["CoW Protocol Team"]
readme = "README.md"
packages = [{include = "cow_performance", from = "src"}]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
# CLI framework
typer = {extras = ["all"], version = "^0.21.0"}
# Configuration management
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
# Async HTTP
aiohttp = "^3.9.0"
# Ethereum interactions
eth-account = "^0.11.0"
web3 = "^6.13.0"
eth-abi = "^5.0.0"
# File formats
pyyaml = "^6.0.1"
# Metrics
prometheus-client = "^0.19.0"
# Docker integration
docker = "^7.0.0"
# Git integration
gitpython = "^3.1.40"
# Statistics and data analysis
numpy = "^2.0.0"  # Python 3.13 support
scipy = "^1.14.0"  # Python 3.13 support
# CLI output formatting
rich = "^13.7.0"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
# Code quality
black = "^23.12.0"
ruff = "^0.14.13"
mypy = "^1.7.0"
# Pre-commit hooks
pre-commit = "^3.6.0"
# Type stubs
types-pyyaml = "^6.0.12"
types-tabulate = "^0.9.0"

[tool.poetry.scripts]
cow-perf = "cow_performance.cli.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "UP007",  # Use X | Y syntax - disabled for Typer 0.9 compatibility
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"src/cow_performance/cli/*.py" = ["UP"]  # Typer requires old-style Optional

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
strict_optional = true

[[tool.mypy.overrides]]
module = [
    "docker.*",
    "prometheus_client.*",
    "scipy.*",
    "numpy.*",
    "pydantic_settings.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/cow_performance",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "e2e: marks tests as end-to-end tests (requires docker-compose running)",
]
filterwarnings = [
    "ignore::DeprecationWarning:typer.completion",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
